--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,10 +29,10 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/VCcode",
-      "program": "d:/VCcode/build/Debug/outDebug",
+      "cwd": "d:/VCcode/used",
+      "program": "d:/VCcode/used/build/Debug/outDebug",
       "MIMode": "gdb",
-      "miDebuggerPath": "C:\\MINGW\\bin\\gdb.exe",
+      "miDebuggerPath": "gdb",
       "setupCommands": [
         {
           "description": "Enable pretty-printing for gdb",
