--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,7 +117,8 @@
     "locale": "cpp",
     "queue": "cpp",
     "stack": "cpp",
-    "version": "cpp"
+    "version": "cpp",
+    "compare": "cpp"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
