--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,7 +120,9 @@
     "version": "cpp",
     "compare": "cpp",
     "concepts": "cpp",
-    "numbers": "cpp"
+    "numbers": "cpp",
+    "ranges": "cpp",
+    "span": "cpp"
   },
   "C_Cpp.errorSquiggles": "enabled"
 }
