--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,8 +29,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "d:/VCcode/used",
-      "program": "d:/VCcode/used/build/Debug/outDebug",
+      "cwd": "d:/VCcode",
+      "program": "d:/VCcode/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
